--- a/index.html
+++ b/index.html
@@ -5,15 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> 
+    <script src="script.js"></script>
     <title>Library</title>
 </head>
 <body>
     <div class="container">
         <div class="title-container">
+            <div class="icon">
+                <img src="icons/library-svgrepo-com.svg" alt="" id="library-icon">
+            </div>
             <div class="title">Library</div>
         </div>
         <div class="library-container">
-            <div class="button_plus"></div>
+            <div class="popup">
+                <h1>New Book</h1>
+                <form>
+                    <label for="title">Title:</label>
+                    <input
+                      type="text"
+                      id="title"
+                      name="title"
+                      placeholder="Book Title"
+                      autocomplete="off"
+                      required
+                    /><br />
+                    <label for="author">Author:</label>
+                    <input
+                      type="text"
+                      id="author"
+                      name="author"
+                      placeholder="Author"
+                      autocomplete="off"
+                      required
+                    /><br />
+                    <label for="pages">Number of pages:</label>
+                    <input
+                      type="number"
+                      id="pages"
+                      name="pages"
+                      placeholder="Pages"
+                      autocomplete="off"
+                      required
+                    /><br />
+                    <label for="read">Read the book?</label>
+                    <select name="read" id="read">
+                      <option value="Yes">Yes</option>
+                      <option value="No">No</option>
+                    </select>
+                    <br />
+                    <input type="submit" value="Submit" id="submit" />
+                </form>
+            </div>
+            <div class="button_plus" onclick="popUp()"></div>
         </div>
     </div>
 </body>
