--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> 
-    <script src="script.js"></script>
+    
     <title>Library</title>
 </head>
 <body>
@@ -56,8 +56,9 @@
                     <input type="submit" value="Submit" id="submit" />
                 </form>
             </div>
-            <div class="button_plus" onclick="popUp()"></div>
+            <div class="button_plus" onclick="openPopup()"></div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
