--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Library</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="blur">
         <div class="title-container">
             <div class="icon">
                 <img src="icons/library-svgrepo-com.svg" alt="" id="library-icon">
@@ -17,48 +17,49 @@
             <div class="title">Library</div>
         </div>
         <div class="library-container">
-            <div class="popup">
-                <h1>New Book</h1>
-                <form>
-                    <label for="title">Title:</label>
-                    <input
-                      type="text"
-                      id="title"
-                      name="title"
-                      placeholder="Book Title"
-                      autocomplete="off"
-                      required
-                    /><br />
-                    <label for="author">Author:</label>
-                    <input
-                      type="text"
-                      id="author"
-                      name="author"
-                      placeholder="Author"
-                      autocomplete="off"
-                      required
-                    /><br />
-                    <label for="pages">Number of pages:</label>
-                    <input
-                      type="number"
-                      id="pages"
-                      name="pages"
-                      placeholder="Pages"
-                      autocomplete="off"
-                      required
-                    /><br />
-                    <label for="read">Read the book?</label>
-                    <select name="read" id="read">
-                      <option value="Yes">Yes</option>
-                      <option value="No">No</option>
-                    </select>
-                    <br />
-                    <input type="submit" value="Submit" id="submit" />
-                </form>
-            </div>
             <div class="button_plus" onclick="openPopup()"></div>
         </div>
     </div>
+    <div class="popup">
+     <button class="close"></button>
+      <h1>New Book</h1>
+      <form>
+          <label for="title">Title:</label>
+          <input
+            type="text"
+            id="title"
+            name="title"
+            placeholder="Book Title"
+            autocomplete="off"
+            required
+          /><br />
+          <label for="author">Author:</label>
+          <input
+            type="text"
+            id="author"
+            name="author"
+            placeholder="Author"
+            autocomplete="off"
+            required
+          /><br />
+          <label for="pages">Number of pages:</label>
+          <input
+            type="number"
+            id="pages"
+            name="pages"
+            placeholder="Pages"
+            autocomplete="off"
+            required
+          /><br />
+          <label for="read">Read the book?</label>
+          <select name="read" id="read">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+          </select>
+          <br />
+          <input type="submit" value="Submit" id="submit" />
+      </form>
+  </div>
     <script src="script.js"></script>
 </body>
 </html>
