--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
             <div class="title">Library</div>
         </div>
         <div class="library-container">
+          <div class="cards-grid">
+          <div class="card" id="card1">
+            <div id="card-title">Book Title</div>
+            <div class="" id="card-author">Author</div>
+            <div id="card-pages">Pages</div>
+            <div id="card-read">Read</div>
+          </div>
+          <div class="card" id="card2"></div>
+          <div class="card" id="card3"></div>
+          <div class="card" id="card4"></div>
+          <div class="card" id="card5"></div>
+        </div>
             <div class="button_plus" onclick="openPopup()"></div>
         </div>
     </div>
