font changes, card styling

--- a/index.html
+++ b/index.html
@@ -19,15 +19,29 @@
         <div class="library-container">
           <div class="cards-grid">
           <div class="card" id="card1">
-            <div id="card-title">Book Title</div>
-            <div class="" id="card-author">Author</div>
-            <div id="card-pages">Pages</div>
+            <div id="card-title">Book Title:</div>
+            <div class="" id="card-author">Author:</div>
+            <div id="card-pages">Pages:</div>
             <div id="card-read">Read</div>
+            <button class="change-read"><img src="icons/edit-svgrepo-com.svg" alt="" id="change-read-img"></button>
+            <button class="delete-book"><img src="icons/delete-svgrepo-com.svg" alt="" id="delete-book-img"></button>
           </div>
-          <div class="card" id="card2"></div>
-          <div class="card" id="card3"></div>
-          <div class="card" id="card4"></div>
-          <div class="card" id="card5"></div>
+          <div class="card" id="card2">
+            <button class="change-read"></button>
+            <button class="delete-book"></button>
+          </div>
+          <div class="card" id="card3">
+            <button class="change-read"></button>
+            <button class="delete-book"></button>
+          </div>
+          <div class="card" id="card4">
+            <button class="change-read"></button>
+            <button class="delete-book"></button>
+          </div>
+          <div class="card" id="card5">
+            <button class="change-read"></button>
+            <button class="delete-book"></button>
+          </div>
         </div>
             <div class="button_plus" onclick="openPopup()"></div>
         </div>
